--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -3,19 +3,20 @@
     padding: 0;
     }
     body{
-        background-image: linear-gradient(45deg, rgba(15, 11, 4, 0.966), rgba(24, 21, 21, 0.877), rgba(15, 11, 4, 0.925));
-        background-image: linear-gradient(80deg, rgba(15, 11, 4, 0.966), rgba(15, 11, 4, 0.945),rgb(15, 11, 4));
+        background-image: linear-gradient(80deg, rgba(0, 0, 0, 0.966), rgba(0, 0, 0, 0.945),rgba(0, 0, 0, 0.966));
+        &::-webkit-scrollbar{
+            width: 7px;
+            background-color: rgb(0, 0, 0);
         }
-    a {
-        text-decoration: none;
+        &::-webkit-scrollbar-thumb{
+            background: rgb(46, 46, 46);
+            border-radius: 10px;
         }
-    h1 {
-        padding-top: 0.5em;
-        color: rgb(255, 255, 255);
-        }
-    
+    }
+
     .tittle {
         text-align: center;
         font-size: 25px;
         margin-top: 0.5em;
+        color: white;
     }
