--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -5,6 +5,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    margin-bottom: 1.5em;
     img{
         width: 100%;
         height: 800px;
@@ -16,11 +17,11 @@
         color: rgb(255, 255, 255);
         margin-top: 2em;
         &:nth-child(1){
-            font-size: 75px;
+            font-size:clamp(25px,10vw,75px);
             font-family: 'Gelasio', serif;
         }
         &:nth-child(2){
-            font-size: 22px;
+            font-size: clamp(15px,6vw,22px);
             margin-top: 1em;
             font-family: 'Gelasio', serif;
         }
@@ -32,7 +33,7 @@
 .grad { 
     width: 100%;
     height: 50em;
-    background-image:linear-gradient(90deg, rgb(31, 31, 31),rgb(0, 0, 0),rgb(31, 31, 31));
+    background-image:linear-gradient(90deg, rgb(15, 15, 15),rgba(0, 0, 0, 0.445),rgb(22, 22, 22));
     position: absolute;
     opacity: 0.6;
 }
