--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,9 +1,10 @@
 .footer {
-    background-color: rgb(15, 11, 4);
+    background-color: rgb(7, 5, 0);
+    background-color: rgba(17, 17, 17, 0.24);
     color: rgb(255, 255, 255);
     font-size: 16px;
     text-align: center;
-    height: 8em;
+    height: 7em;
     .rrss {
         color: rgb(255, 255, 255);
         padding:1em;
