--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -1,7 +1,7 @@
 .ver-mas {  
-    font-size: 22px;
+    font-size:clamp(5px,4vw,25px);
     font-family: sans-serif;
-    width: 9em;
+    width: 15em;
     margin: auto;
     text-align: center;
     border-radius: 15px;
@@ -9,14 +9,17 @@
     background-color: rgb(51, 51, 51);
     transition: all 0.25s;
     cursor: pointer;
-    color: rgb(255, 255, 255);
+    a{
+        color:rgb(255, 255, 255);
+        text-decoration: none;
+    }
     &:hover {
         transform: scale(1.1);
     }
 }
 section h2 {
     text-align: center;
-    font-size: 35px;
+    font-size:clamp(10px,10vw,35px);
     padding-top: 20px;
     color: rgb(255, 255, 255);
     font-family: sans-serif;
