--- a/src/scss/_nosotros.scss
+++ b/src/scss/_nosotros.scss
@@ -14,3 +14,33 @@
         color: rgb(255, 255, 255);
     }
 }
+.nosotros {
+    .nosotros-parrafo {
+        color: white;
+        text-align: center;
+        margin: auto;
+        width: 80%;
+        font-size: 20px;
+        margin-top: 10px;
+    }
+    .nosotros-galeria {
+        margin: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        .nosotros-img {
+            width: 30em;
+            margin: 1em;
+            img{
+                width: 100%;
+                height: 25em;
+                object-fit: cover;
+                transition: all 0.25s;
+                &:hover{
+                    border: 10px solid rgba(116, 116, 116, 0);
+                    box-sizing: border-box;
+                }
+            }
+        }
+    }   
+}
